html structure; background-color body; dito favicon

--- a/src/app/satisfaction-survey/satisfaction-survey.component.html
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.html
@@ -1,3 +1,70 @@
-<p>
-  satisfaction-survey works!
-</p>
+<div id="container">
+
+  <header>
+    <h1>Pesquisa</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li>Ponto de Venda</li>
+    </ul>
+  </nav>
+
+  <main>
+    <h2>Consolidado das lojas</h2>
+
+    <div id="satisfaction-container">
+      <div><h3>Satisfação</h3></div>
+      <div><h3>Avaliações</h3></div>
+      <div><h3>Excelente</h3></div>
+      <div><h3>Muito bom</h3></div>
+      <div><h3>Razoável</h3></div>
+      <div><h3>Ruim</h3></div>
+      <div><h3>Horrível</h3></div>
+    </div>
+
+    <h2>Lojas</h2>
+
+    <input type="text" placeholder="Buscar loja">
+    <button>P</button>
+
+    <table>
+      <thead>
+        <tr>
+          <th></th>
+          <th>NOME DA LOJA</th>
+          <th>SATISFAÇÃO</th>
+          <th>AVALIAÇÕES</th>
+          <th>EXCELENTE</th>
+          <th>MUITO BOM</th>
+          <th>RAZOÁVEL</th>
+          <th>RUIM</th>
+          <th>HORRÍVEL</th>
+          <th></th>
+        </tr>
+      </thead>
+
+      <tbody>
+        <tr>
+            <td>1</td>
+            <td>Icarai</td>
+            <td>4,0%</td>
+            <td>14</td>
+            <td>90</td>
+            <td>5</td>
+            <td>5</td>
+            <td>0</td>
+            <td>0</td>
+            <td><button>+</button></td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div>
+      <div>Primeira</div>
+      <div>1</div>
+      <div>2</div>
+      <div>Última</div>
+    </div>
+  </main>
+</div>
