--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div>
+
+<div id="container">
   <app-satisfaction-survey></app-satisfaction-survey>
 </div>
-
 
 <router-outlet></router-outlet>
