[PSV-1] basic positioning; html small changes

--- a/src/app/satisfaction-survey/satisfaction-survey.component.html
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.html
@@ -1,4 +1,4 @@
-<div id="container">
+<div id="satisfaction-survey">
 
   <header>
     <h1>Pesquisa</h1>
@@ -6,7 +6,7 @@
 
   <nav>
     <ul>
-      <li>Ponto de Venda</li>
+      <li><a href="#">Ponto de Venda</a></li>
     </ul>
   </nav>
 
@@ -31,8 +31,7 @@
     <table>
       <thead>
         <tr>
-          <th></th>
-          <th>NOME DA LOJA</th>
+          <th colspan="2">NOME DA LOJA</th>
           <th>SATISFAÇÃO</th>
           <th>AVALIAÇÕES</th>
           <th>EXCELENTE</th>
@@ -60,11 +59,11 @@
       </tbody>
     </table>
 
-    <div>
-      <div>Primeira</div>
-      <div>1</div>
-      <div>2</div>
-      <div>Última</div>
+    <div id="pagination-container">
+      <button>Primeira</button>
+      <button class="active">1</button>
+      <button>2</button>
+      <button>Última</button>
     </div>
   </main>
 </div>
