[PSV-2] icons and font-awesome added; positioning satisfaction container

--- a/src/app/satisfaction-survey/satisfaction-survey.component.html
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.html
@@ -14,13 +14,50 @@
     <h2>Consolidado das lojas</h2>
 
     <div id="satisfaction-container">
-      <div><h3>Satisfação</h3></div>
-      <div><h3>Avaliações</h3></div>
-      <div><h3>Excelente</h3></div>
-      <div><h3>Muito bom</h3></div>
-      <div><h3>Razoável</h3></div>
-      <div><h3>Ruim</h3></div>
-      <div><h3>Horrível</h3></div>
+      <div>
+        <h3>Satisfação <i class="fas 2x fa-question-circle"></i></h3>
+        <span>82,1%</span>
+      </div>
+      <div>
+        <h3>Avaliações <i class="fas 2x fa-question-circle"></i></h3>
+        <span>1289</span>
+      </div>
+      <div>
+        <h3>Excelente</h3>
+        <div>
+          <span></span>
+          <img src="./assets/icons/excelente.svg">
+          <span>70%</span>
+        </div>
+      </div>
+      <div>
+        <h3>Muito bom</h3>
+        <div>
+          <img src="./assets/icons/muito-bom.svg">
+          <span>70%</span>
+        </div>
+      </div>
+      <div>
+        <h3>Razoável</h3>
+        <div>
+          <img src="./assets/icons/razoavel.svg">
+          <span>70%</span>
+        </div>
+      </div>
+      <div>
+        <h3>Ruim</h3>
+        <div>
+          <img src="./assets/icons/ruim.svg">
+          <span>70%</span>
+        </div>
+      </div>
+      <div>
+        <h3>Horrível</h3>
+        <div>
+          <img src="./assets/icons/horrivel.svg">
+          <span>70%</span>
+        </div>
+      </div>
     </div>
 
     <h2>Lojas</h2>
@@ -45,16 +82,16 @@
 
       <tbody>
         <tr>
-            <td>1</td>
-            <td>Icarai</td>
-            <td>4,0%</td>
-            <td>14</td>
-            <td>90</td>
-            <td>5</td>
-            <td>5</td>
-            <td>0</td>
-            <td>0</td>
-            <td><button>+</button></td>
+          <td>1</td>
+          <td>Icarai</td>
+          <td>4,0%</td>
+          <td>14</td>
+          <td>90</td>
+          <td>5</td>
+          <td>5</td>
+          <td>0</td>
+          <td>0</td>
+          <td><button>+</button></td>
         </tr>
       </tbody>
     </table>
