--- a/src/app/satisfaction-survey/satisfaction-survey.component.scss
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.scss
@@ -2,6 +2,7 @@
   $white: #fff;
   $white-500: #f5f5f5;
   $grey-600: #e6e6e6;
+
   width: 1271px;
   margin: auto;
   background-color: $white;
@@ -11,10 +12,12 @@
     justify-content: flex-start;
     background-color: $white-500;
     padding: 0px;
+
     li {
       padding: 1.5vh 1.5vw;
       background-color: $white;
       list-style: none;
+
       a {
         text-decoration: none;
         color: black;
@@ -27,12 +30,14 @@
 
     #satisfaction-container {
       display: flex;
-      flex-flow: row wrap;
+
       > div {
         display: flex;
+        flex-flow: column nowrap;
         align-items: center;
         justify-content: center;
         width: 176px;
+        height: 120px;
         border: 1px solid $grey-600;
         border-left-width: 0px;
         border-right-width: 0px;
@@ -40,6 +45,20 @@
         &:nth-child(odd) {
           border-left-width: 1px;
           border-right-width: 1px;
+        }
+
+        h3 {
+          margin-bottom: 6px;
+        }
+
+        > div {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+
+          span {
+            margin-left: 8px;
+          }
         }
       }
     }
