[PSV-3] input icons and basic style

--- a/src/app/satisfaction-survey/satisfaction-survey.component.html
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.html
@@ -62,8 +62,10 @@
 
     <h2>Lojas</h2>
 
-    <input type="text" placeholder="Buscar loja">
-    <button>P</button>
+    <div class="search-input">
+      <input type="text" placeholder="Buscar loja">
+      <button><i class="fas fa-search fa-sm"></i></button>
+    </div>
 
     <table>
       <thead>
