[PSV-4] font-family; font-size; css general adjusts

--- a/src/app/satisfaction-survey/satisfaction-survey.component.html
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.html
@@ -6,7 +6,7 @@
 
   <nav>
     <ul>
-      <li><a href="#">Ponto de Venda</a></li>
+      <li class="active"><a href="#">PONTO DE VENDA</a></li>
     </ul>
   </nav>
 
@@ -70,7 +70,9 @@
     <table>
       <thead>
         <tr>
-          <th colspan="2">NOME DA LOJA<i class="fas fa-sort-down"></i></th>
+          <th colspan="2">
+            <span>NOME DA LOJA</span>
+            <i class="fas fa-sort-down"></i>
           <th>
             <span>SATISFAÇÃO</span>
             <i class="fas fa-sort-down"></i>
