--- a/src/app/satisfaction-survey/satisfaction-survey.component.scss
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.scss
@@ -1,37 +1,79 @@
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
+
 #satisfaction-survey {
   $white: #fff;
   $white-500: #f5f5f5;
+  $green-500: #8acc54;
   $grey-100: #e1e1e1;
   $grey-600: #e6e6e6;
   $grey-800: #f8f7f8;
+  $black-200: #525c5d;
+  $black-300: #333333;
+  $black-700: #777777;
+  $black-600: #636363;
 
+  font-family: "Open Sans";
+  color: $black-300;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
   width: 1271px;
-  margin: auto;
+  border-radius: 5px;
+  margin: 40px auto;
+  padding-left: 23px;
+  padding-top: 23px;
   background-color: $white;
+
+  h1 {
+    margin: 0;
+    font-size: 26px;
+    font-weight: 600;
+    letter-spacing: -0.7px;
+    color: $black-200;
+  }
+
+  h2 {
+    color: $black-300;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: -0.5px;
+    margin-top: 40px;
+  }
 
   nav ul {
     display: flex;
     justify-content: flex-start;
     background-color: $white-500;
     padding: 0px;
+    margin-left: -23px;
 
     li {
-      padding: 1.5vh 1.5vw;
       background-color: $white;
       list-style: none;
+      height: 54px;
+      padding: 20px 24px;
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
 
       a {
         text-decoration: none;
-        color: black;
+        color: $black-600;
+        font-size: 11px;
+        letter-spacing: -0.2px;
+        font-weight: normal;
+      }
+
+      &.active {
+        border-top: 2px solid $green-500;
       }
     }
   }
 
   main {
-    padding: 15px;
-
     #satisfaction-container {
       display: flex;
+      margin: 35px auto;
 
       > div {
         display: flex;
@@ -51,6 +93,19 @@
 
         h3 {
           margin-bottom: 6px;
+          letter-spacing: -0.2px;
+          font-size: 14px;
+
+          i {
+            font-size: 12px;
+            color: #bbc0c4;
+            cursor: pointer;
+          }
+        }
+
+        > span{
+          font-size: 28px;
+          letter-spacing: -0.8px;
         }
 
         > div {
@@ -60,6 +115,7 @@
 
           span {
             margin-left: 8px;
+            font-size: 15px;
           }
         }
       }
@@ -92,6 +148,15 @@
     table {
 
       th {
+        span {
+          font-size: 11px;
+          font-weight: bold;
+          letter-spacing: 0.2px;
+          font-style: normal;
+          font-stretch: normal;
+          line-height: normal;
+          color: $black-700;
+        }
         .fa-sort-down {
           margin-left: 17px;
           color: #e1e1e1;
@@ -101,10 +166,15 @@
       tbody {
         tr {
           td {
+            font-size: 14px;
+            font-weight: 600;
+            color: $black-300;
+
             span {
               border-radius: 100%;
-              padding: 4.5px 9px;
+              padding: 6px 10px;
               border: 1px solid $grey-600;
+              font-size: 11px;
             }
           }
         }
