--- a/src/app/satisfaction-survey/satisfaction-survey.component.scss
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.scss
@@ -17,7 +17,7 @@
   font-weight: 600;
   font-style: normal;
   font-stretch: normal;
-  width: 1271px;
+  width: 1200px;
   border-radius: 5px;
   margin: 40px auto;
   padding-left: 23px;
@@ -37,7 +37,7 @@
     font-size: 18px;
     font-weight: 600;
     letter-spacing: -0.5px;
-    margin-top: 40px;
+    margin-top: 30px;
   }
 
   nav ul {
@@ -78,10 +78,10 @@
       > div {
         display: flex;
         flex-flow: column nowrap;
-        align-items: center;
-        justify-content: center;
-        width: 176px;
-        height: 120px;
+        box-sizing: border-box;
+        padding: 31px 33px;
+        width: 168px;
+        height: 130px;
         border: 1px solid $grey-600;
         border-left-width: 0px;
         border-right-width: 0px;
@@ -92,7 +92,8 @@
         }
 
         h3 {
-          margin-bottom: 6px;
+          margin: 0;
+          margin-bottom: 8px;
           letter-spacing: -0.2px;
           font-size: 14px;
 
@@ -111,11 +112,15 @@
         > div {
           display: flex;
           align-items: center;
-          justify-content: center;
+          margin-top: 6px;
+
+          img {
+            width: 31px;
+          }
 
           span {
             margin-left: 8px;
-            font-size: 15px;
+            font-size: 14px;
           }
         }
       }
@@ -123,6 +128,7 @@
 
     .search-input {
       box-sizing: border-box;
+      margin-top: 35px;
 
       input,
       button {
@@ -146,6 +152,7 @@
     }
 
     table {
+      margin: 20px 0;
 
       th {
         span {
