[PSV-5] table style

--- a/src/app/satisfaction-survey/satisfaction-survey.component.html
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.html
@@ -69,7 +69,7 @@
     <table>
       <thead>
         <tr>
-          <th colspan="2">
+          <th>
             <span>NOME DA LOJA</span>
             <i class="fas fa-sort-down"></i>
           <th>
@@ -106,8 +106,7 @@
 
       <tbody>
         <tr>
-          <td><span>1</span></td>
-          <td>Icarai</td>
+          <td><span>1</span>Icarai</td>
           <td>4,0%</td>
           <td>14</td>
           <td>90</td>
@@ -115,8 +114,27 @@
           <td>5</td>
           <td>0</td>
           <td>0</td>
-          <td><button>+</button></td>
+          <td>
+            <button>
+              <i class="fas fa-plus fa-xs"></i>
+            </button>
+          </td>
         </tr>
+        <tr>
+            <td><span>1</span>Icarai</td>
+            <td>4,0%</td>
+            <td>14</td>
+            <td>90</td>
+            <td>5</td>
+            <td>5</td>
+            <td>0</td>
+            <td>0</td>
+            <td>
+              <button>
+                <i class="fas fa-plus fa-xs"></i>
+              </button>
+            </td>
+          </tr>
       </tbody>
     </table>
 
