--- a/src/app/satisfaction-survey/satisfaction-survey.component.scss
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.scss
@@ -3,12 +3,17 @@
 #satisfaction-survey {
   $white: #fff;
   $white-500: #f5f5f5;
+  $white-800: #f8f8f8;
   $green-500: #8acc54;
+  $green-600: #2ab765;
   $grey-100: #e1e1e1;
+  $grey-200: #dddddd;
   $grey-600: #e6e6e6;
   $grey-800: #f8f7f8;
+  $grey-900: #989898;
   $black-200: #525c5d;
   $black-300: #333333;
+  $black-500: #555555;
   $black-700: #777777;
   $black-600: #636363;
 
@@ -104,7 +109,7 @@
           }
         }
 
-        > span{
+        > span {
           font-size: 28px;
           letter-spacing: -0.8px;
         }
@@ -149,7 +154,7 @@
         border: 1px solid $grey-600;
         cursor: pointer;
 
-        i{
+        i {
           color: $black-600;
           font-size: 14px;
         }
@@ -158,35 +163,86 @@
 
     table {
       margin: 20px 0;
+      width: 1176px;
+      border-collapse: collapse;
+      border: 1px solid $grey-600;
+      text-align: left;
+      padding: 0;
+      cursor: default;
 
-      th {
-        span {
-          font-size: 11px;
-          font-weight: bold;
-          letter-spacing: 0.2px;
-          font-style: normal;
-          font-stretch: normal;
-          line-height: normal;
-          color: $black-700;
-        }
-        .fa-sort-down {
-          margin-left: 17px;
-          color: #e1e1e1;
+      thead {
+        background-color: $grey-800;
+
+        th {
+          padding: 0 18px;
+          height: 50px;
+          box-sizing: border-box;
+
+          span {
+            font-size: 11px;
+            font-weight: bold;
+            letter-spacing: 0.2px;
+            font-style: normal;
+            font-stretch: normal;
+            line-height: normal;
+            color: $black-700;
+            text-align: left;
+          }
+
+          .fa-sort-down {
+            margin-left: 17.5px;
+            color: #e1e1e1;
+            font-size: 16px;
+            cursor: pointer;
+          }
         }
       }
 
       tbody {
         tr {
+          box-sizing: border-box;
+          height: 70px;
+          padding: 19px 21px;
+          border: 1px solid $grey-100;
+
           td {
             font-size: 14px;
             font-weight: 600;
-            color: $black-300;
+            color: $grey-900;
+            letter-spacing: -0.4px;
+            padding: 18px;
 
+            &:nth-child(1) {
+              padding-left: 19px;
+              width: 197px;
+              color: $black-300;
+              letter-spacing: normal;
+            }
             span {
               border-radius: 100%;
               padding: 6px 10px;
               border: 1px solid $grey-600;
               font-size: 11px;
+              margin-right: 18px;
+            }
+
+            &:hover {
+              color: $green-600;
+            }
+
+            button {
+              width: 25px;
+              height: 25px;
+              border-radius: 2px;
+              background-color: $white-800;
+              border: 1px solid $grey-200;
+              cursor: pointer;
+
+              &:hover {
+                background-color: $black-500;
+                color: $white;
+                border: none;
+              }
             }
           }
         }
@@ -198,8 +254,8 @@
 
       > button {
         &.active {
-          background-color: #555;
-          color: #fff;
+          background-color: $black-500;
+          color: $white;
         }
       }
     }
