--- a/src/app/satisfaction-survey/satisfaction-survey.component.scss
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.scss
@@ -31,6 +31,7 @@
 
   h1 {
     margin: 0;
+    margin-bottom: 22px;
     font-size: 26px;
     font-weight: 600;
     letter-spacing: -0.7px;
@@ -250,13 +251,37 @@
     }
 
     #pagination-container {
+      width: 243px;
       display: flex;
 
       > button {
+        background-color: white;
+        color: $black-500;
+        border: 1px solid $grey-600;
+        height: 30px;
+        width: 40px;
+        margin-bottom: 35px;
+        cursor: pointer;
+
+        &:nth-of-type(1){
+          border-bottom-left-radius: 5px;
+          border-top-left-radius: 5px;
+          width: 90px;
+          color: $grey-900;
+        }
+
+        &:nth-of-type(4){
+          border-bottom-right-radius: 5px;
+          border-top-right-radius: 5px;
+          width: 80px;
+        }
+
         &.active {
           background-color: $black-500;
           color: $white;
+          border: none;
         }
+
       }
     }
   }
