[PSL-3] consolidated total stores;  code refactoring

--- a/src/app/satisfaction-survey/satisfaction-survey.component.html
+++ b/src/app/satisfaction-survey/satisfaction-survey.component.html
@@ -16,45 +16,45 @@
     <div id="satisfaction-container">
       <div>
         <h3>Satisfação <i class="fas fa-question-circle"></i></h3>
-        <span>82,1%</span>
+        <span>{{ consolidatedTotalStores.satisfactionPercent }}%</span>
       </div>
       <div>
         <h3>Avaliações <i class="fas 2x fa-question-circle"></i></h3>
-        <span>1.289</span>
+        <span>{{ consolidatedTotalStores.totalAvaliations }}</span>
       </div>
       <div>
         <h3>Excelente</h3>
         <div>
           <img src="./assets/icons/excelente.svg">
-          <span>70%</span>
+          <span>{{ consolidatedTotalStores.excelente }}</span>
         </div>
       </div>
       <div>
         <h3>Muito bom</h3>
         <div>
           <img src="./assets/icons/muito-bom.svg">
-          <span>70%</span>
+          <span>{{ consolidatedTotalStores.muitobom }}</span>
         </div>
       </div>
       <div>
         <h3>Razoável</h3>
         <div>
           <img src="./assets/icons/razoavel.svg">
-          <span>70%</span>
+          <span>{{ consolidatedTotalStores.razoavel }}</span>
         </div>
       </div>
       <div>
         <h3>Ruim</h3>
         <div>
           <img src="./assets/icons/ruim.svg">
-          <span>70%</span>
+          <span>{{ consolidatedTotalStores.ruim }}</span>
         </div>
       </div>
       <div>
         <h3>Horrível</h3>
         <div>
           <img src="./assets/icons/horrivel.svg">
-          <span>70%</span>
+          <span>{{ consolidatedTotalStores.horrivel }}</span>
         </div>
       </div>
     </div>
